# proxy-e-drum

./: .gitignore
e-drum brain/: README.md  edrum-brain-spec.md  phase0-plan.md  phase1-plan.md  pyproject.toml
e-drum brain/edrum/: __init__.py
e-drum brain/edrum/cli/: __init__.py  main.py
e-drum brain/edrum/engine/: __init__.py  normalize.py  profiles.py  records.py  session.py  vocab.py
e-drum brain/edrum/io/: __init__.py  capture.py  clock.py  logfile.py  sources.py
e-drum brain/profiles/: td02k.json
e-drum brain/tests/: conftest.py  test_capture.py  test_cli.py  test_clock.py  test_e2e_slice1.py  test_fixtures_golden.py  test_logfile.py  test_records.py  test_session.py  test_sources.py  test_vocab_profiles.py
e-drum brain/tests/fixtures/: anonymous_enroll.jsonl  declarations.jsonl  forward_compat.jsonl  minimal.jsonl  truncated.jsonl  warmup_no_grid.jsonl
e-drum capture/e-drummer/: README.md  edrum-capture-spec.md  firmware-architecture-roadmap.md  platformio.ini  td02-vbus-enumeration-experiment.md
e-drum capture/e-drummer/lib/edrum_core/: library.json
e-drum capture/e-drummer/lib/edrum_platform/: library.json
e-drum capture/e-drummer/src/: app.h  app_config.h  capture_task.cpp  click_task.cpp  console.cpp  main.cpp  storage_task.cpp
e-drum capture/e-drummer/test/embedded/test_hw_smoke/: main.cpp
e-drum capture/e-drummer/test/native/test_cb_gap/: main.cpp
e-drum capture/e-drummer/tools/: gen_fixture_header.py  native_link_static.py
e-drum capture/e-drummer/tools/probe/: usb_enumeration_probe.cpp
(+55 files in other folders)
