[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edrum"
version = "0.1.0"
description = "E-drum practice tool - brain half (Phase 0: canonical schema + laptop recorder)"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
]

[project.optional-dependencies]
# Real MIDI ports (edrum record / edrum ports). Kept optional so the pure
# engine + file tooling work without a native MIDI backend.
live = ["python-rtmidi>=1.5"]
dev = ["pytest>=8"]

[project.scripts]
edrum = "edrum.cli.main:main"

[tool.setuptools.packages.find]
include = ["edrum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
